--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspace='10'>
     <tr>
-      <td><img src="img\Harshith.png" alt="Harshith's profile"></td>
+      <td><img src="CV\img\Harshith.png" alt="Harshith's profile"></td>
       <td>
         <h1></h1>
         <p><strong>Engineering Student in pursue of creating an impact in IT industry</strong></p>
