--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>SRI Harshith G's first website 💚</title>
 </head>
 
-<body>
+<body background-color: #92a8d1>
   <table cellspace='10'>
     <tr>
       <td><img src="img\Harshith.png" alt="Harshith's profile"></td>
